# MOSHPIT

./: .gitattributes  .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
ci/recipe/: meta.yaml
conda-recipe/: meta.yaml
hooks/: 50_activate_mosh_tab_completion.sh
moshpit/: __init__.py  __main__.py
