[project]
name = "moshpit"
authors = [
    { name = "Michal Ziemski, Evan Bolyen", email = "ziemski.michal@gmail.com" }
]
description = "QIIME 2 Proxy Package for Metagenomic Analysis Tool Suite"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
dynamic = ["version"]

[project.urls]
Homepage = "https://bokulich-lab.github.io/moshpit-docs/intro.html"
Repository = "https://github.com/bokulich-lab/MOSHPIT"

[project.scripts]
"mosh" = "moshpit.__main__:mosh"

[build-system]
requires = [
    "setuptools",
    "versioningit",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.versioningit.vcs]
method = "git-archive"
describe-subst = "$Format:%(describe)$"
default-tag = "0.0.1"

[tool.versioningit.next-version]
method = "minor"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.write]
file = "moshpit/_version.py"

[tool.setuptools]
include-package-data = true
script-files = [
    "bin/tab-mosh"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["moshpit*"]

[tool.setuptools.package-data]
 moshpit = ["**/*"]
